# py-cachify

./: .gitignore  .readthedocs.yml  AGENTS.md  LICENSE  README.md  context7.json  mkdocs.yml  pyproject.toml  sonar-project.properties
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build-and-publish.yml  checks.yml  integration-tests.yml
docs/: cached-decorator.md  examples.md  index.md  llm-full.md  locks.md  once-decorator.md  release-notes.md  requirements.txt  setup.md
docs/help/: contribution.md  help.md
docs/reference/: cached.md  init.md  lock.md  once.md  pool.md
docs/scripts/: hooks.py
docs/tutorial/: index.md
docs/tutorial/cached-decorator/: dynamic-cache-keys.md  first-steps.md  reset-attribute.md  specifying-ttl-and-encoder-decoder.md
docs/tutorial/initial-setup/: initialization.md  install.md
docs/tutorial/locks/: lock-as-decorator.md  lock-methods.md  lock-parameters.md  locks-intro.md  simple-locks.md
docs/tutorial/once-decorator/: index.md
docs/tutorial/pools/: pool-methods.md  pool-parameters.md  pooled-decorator.md  pools-intro.md  simple-pools.md
integration_tests/: conftest.py  test_clients_isolation_and_ttl.py  test_decorators.py  test_pool.py  test_unpicklable_cache.py
py_cachify/: __init__.py  async.py  asyncio.py  base.py  cached.py  exceptions.py  lock.py  sync.py
py_cachify/_backend/: _cached.py  _clients.py  _constants.py  _exceptions.py  _helpers.py  _lib.py  _lock.py  _logger.py  _pool.py  _pool_state.py  clients.py  helpers.py  lib.py
py_cachify/_backend/_types/: _common.py  _lock_wrap.py  _pool_wrap.py  _reset_wrap.py
py_cachify/backend/: base.py  cached.py  clients.py  exceptions.py  helpers.py  lib.py  lock.py  types.py
tests/: conftest.py  test_backend.py  test_base.py  test_cached.py  test_helpers.py  test_lock_decorator.py  test_locks.py  test_merge.py  test_once_decorator.py  test_pools.py
